# server-config

./: .envrc  .gitignore  LICENSE  Makefile  README.md  TODO.txt  fetchHetznerKeys.nix  flake.nix  overrides.nix  pyproject.toml  rogryza.me.nix  shell.nix
config/: .gitattributes  .vault-pass.gpg  ansible.cfg  encrypted_vars.yaml  inventory.py  playbook.yaml
config/files/: backup.service  backup_hardening.conf
config/scripts/: ansible-vault-merge.sh  vault-pass.sh
config/tasks/: backup.yaml  base.yaml  freshrss.yaml  kanboard.yaml  linkding.yaml  nextcloud.yaml  planka.yaml  postgres.yaml  reverse-proxy.yaml  tandoor.yaml
config/tasks/common/: volume-with-backup.yaml  volume_with_backup.yaml
keys/: id_rsa.pub
modules/: base.nix  my.nix  taskserver.nix
nix/: nixpkgs.nix  sources.json
nixos/modules/server/: default.nix  ssh.nix
packer/: .gitignore  main.pkr.hcl  ntp.conf  playbook.yml
packer/docker-local-persist/: checksum.txt
scripts/: init_backup_repo.sh  mydocker  myssh
terraform/: .gitignore  .terraform.lock.hcl  dns.tf  freshrss.tf  glusterfs.tf  k3s.tf  kubeconfig  main.tf  nixos_test_server.tf  nodes.tf  postgres.tf  s3.tf  servers.tf  swarm.tf  versions.tf
terraform-bootstrap/: .terraform.lock.hcl  README.md  backend.tf  terraform.tfstate  versions.tf
terraform/files/: gpg-public-key  id_rsa.pub  sshd_config
terraform/scripts/: ssh-forward.sh  tf.sh
