[tool.poetry]
name = "server-config"
version = "0.1.0"
description = ""
authors = ["Rodrigo Gryzinski <rogryza@rogryza.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
nixops_hcloud = {git = "https://github.com/nix-community/nixops_hcloud.git", branch="master"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
